--- a/Paint/Base.lproj/Main.storyboard
+++ b/Paint/Base.lproj/Main.storyboard
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Paint View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="PaintViewController" customModule="Paint" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +18,165 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wyR-CG-FDM"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dsb-FJ-2H8"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PFy-QB-E5i">
+                                <frame key="frameInset" minX="74" minY="597" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="brushIcon"/>
+                                <connections>
+                                    <action selector="changeWidthButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Kyg-sk-NtZ"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xuq-rj-F8m">
+                                <frame key="frameInset" minX="16" minY="597" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="colorIcon">
+                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                </state>
+                                <connections>
+                                    <action selector="changeColorButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2Nm-Jk-tEv"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h7e-1P-iz1">
+                                <frame key="frameInset" minX="309" minY="597" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="clearIcon"/>
+                                <connections>
+                                    <action selector="clear:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LOw-X3-WJZ"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="wyR-CG-FDM" secondAttribute="trailing" constant="-16" id="5eJ-Ff-8T5"/>
+                            <constraint firstItem="dsb-FJ-2H8" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="-20" id="721-9N-gBu"/>
+                            <constraint firstItem="dsb-FJ-2H8" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-16" id="JBY-x0-mvo"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="dsb-FJ-2H8" secondAttribute="trailing" constant="-16" id="Sns-I8-5AG"/>
+                            <constraint firstItem="wyR-CG-FDM" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-16" id="UIC-HP-TIT"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="dsb-FJ-2H8" secondAttribute="bottom" id="aWT-mj-gVG"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="wyR-CG-FDM" secondAttribute="bottom" id="oTc-6E-YtX"/>
+                            <constraint firstItem="wyR-CG-FDM" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="-20" id="y7x-bp-wTu"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="changeColorButton" destination="xuq-rj-F8m" id="zfc-cz-Gtn"/>
+                        <outlet property="changeWidthButton" destination="PFy-QB-E5i" id="Wlz-AU-7Nu"/>
+                        <outlet property="mainImageView" destination="wyR-CG-FDM" id="uSm-OM-81l"/>
+                        <outlet property="tempImageView" destination="dsb-FJ-2H8" id="xJN-Jc-dRP"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="375" y="-220"/>
+        </scene>
+        <!--Color Picker View Controller-->
+        <scene sceneID="Jx7-QY-8Ww">
+            <objects>
+                <viewController storyboardIdentifier="sbColorPicker" id="8QU-of-wfK" customClass="ColorPickerViewController" customModule="Paint" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="RgV-Pt-AoB"/>
+                        <viewControllerLayoutGuide type="bottom" id="nqN-7t-y8t"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="XMw-Cb-O9e">
+                        <rect key="frame" x="0.0" y="0.0" width="273" height="431"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="3II-ax-IZl">
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="1" minimumInteritemSpacing="1" id="wCa-jO-c43">
+                                    <size key="itemSize" width="24" height="24"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ColorCell" id="rss-In-Fc0">
+                                        <rect key="frame" x="0.0" y="0.0" width="24" height="24"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="24" height="24"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </view>
+                                        <size key="customSize" width="24" height="24"/>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="3II-ax-IZl" secondAttribute="trailing" constant="8" id="HAX-Co-JLE"/>
+                            <constraint firstItem="3II-ax-IZl" firstAttribute="top" secondItem="XMw-Cb-O9e" secondAttribute="top" constant="8" id="cuq-gU-5XS"/>
+                            <constraint firstItem="3II-ax-IZl" firstAttribute="leading" secondItem="XMw-Cb-O9e" secondAttribute="leading" constant="8" id="fXm-ib-RTb"/>
+                            <constraint firstItem="nqN-7t-y8t" firstAttribute="top" secondItem="3II-ax-IZl" secondAttribute="bottom" constant="8" id="gx0-BL-YuH"/>
+                        </constraints>
+                    </view>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="273" height="431"/>
+                    <connections>
+                        <outlet property="colorCollectionView" destination="3II-ax-IZl" id="bH8-W4-m8R"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5YV-DD-AlE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1044" y="-197.45127436281859"/>
+        </scene>
+        <!--Width View Controller-->
+        <scene sceneID="fnI-2e-3Mo">
+            <objects>
+                <viewController storyboardIdentifier="widthPickerVC" id="RaE-sj-Snc" customClass="WidthViewController" customModule="Paint" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="7xO-X9-jgg"/>
+                        <viewControllerLayoutGuide type="bottom" id="UAk-zI-JaF"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="WPX-WZ-B3d">
+                        <rect key="frame" x="0.0" y="0.0" width="100" height="180"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Fkb-Ut-mM2">
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="vMU-PH-d4y">
+                                    <size key="itemSize" width="10" height="10"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="WidthCell" id="0Bh-w5-VSZ">
+                                        <rect key="frame" x="0.0" y="0.0" width="10" height="10"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="10" height="10"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </view>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Fkb-Ut-mM2" secondAttribute="trailing" id="3oY-rO-al9"/>
+                            <constraint firstItem="Fkb-Ut-mM2" firstAttribute="leading" secondItem="WPX-WZ-B3d" secondAttribute="leading" id="TZF-UL-Brh"/>
+                            <constraint firstItem="UAk-zI-JaF" firstAttribute="top" secondItem="Fkb-Ut-mM2" secondAttribute="bottom" constant="-120" id="p5G-uD-p60"/>
+                            <constraint firstItem="Fkb-Ut-mM2" firstAttribute="top" secondItem="WPX-WZ-B3d" secondAttribute="top" id="xJ4-oA-arW"/>
+                        </constraints>
+                    </view>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="100" height="180"/>
+                    <connections>
+                        <outlet property="widthCollectionView" destination="Fkb-Ut-mM2" id="eFN-Et-Jmu"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Fau-mw-iDZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1529.5999999999999" y="-197.45127436281859"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="brushIcon" width="100" height="100"/>
+        <image name="clearIcon" width="100" height="100"/>
+        <image name="colorIcon" width="100" height="100"/>
+    </resources>
 </document>
