--- a/Paint/Base.lproj/Main.storyboard
+++ b/Paint/Base.lproj/Main.storyboard
@@ -182,7 +182,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fau-mw-iDZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1529.5999999999999" y="-197.45127436281859"/>
+            <point key="canvasLocation" x="1414" y="-246"/>
         </scene>
     </scenes>
     <resources>
